kubernetes-prod-1/Traefik-PiHole/Manifest/PiHole/default-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: pihole
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https

# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: redirect-to-https
#   namespace: pihole
# spec:
#   redirectScheme:
#     scheme: https
#     permanent: true
