kubernetes-prod-1/Traefik-PiHole/Manifest/PiHole/PiHole-Unbound-Deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 80
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/pihole
            - name: dnsmasq
              mountPath: /etc/dnsmasq.d
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pihole-config
        - name: dnsmasq
          persistentVolumeClaim:
            claimName: pihole-config
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole-system
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
    - name: web
      port: 85
      protocol: TCP
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unbound
  namespace: pihole-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unbound
  template:
    metadata:
      labels:
        app: unbound
    spec:
      containers:
        - name: unbound
          image: mvance/unbound:latest
          ports:
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
          volumeMounts:
            - name: forward-records
              mountPath: /opt/unbound/etc/unbound/forward-records.conf
              subPath: forward-records.conf
            - name: a-records
              mountPath: /opt/unbound/etc/unbound/a-records.conf
              subPath: a-records.conf
      volumes:
        - name: forward-records
          configMap:
            name: unbound-config
        - name: a-records
          configMap:
            name: unbound-config
---
apiVersion: v1
kind: Service
metadata:
  name: unbound
  namespace: pihole-system
spec:
  type: LoadBalancer
  selector:
    app: unbound
  ports:
    - name: dns-tcp
      port: 5335
      protocol: TCP
      targetPort: 53
    - name: dns-udp
      port: 5335
      protocol: UDP
      targetPort: 53
