kubernetes-prod-1/Traefik-PiHole/Manifest/PiHole/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.pihole1.local.kaneworld.org`) # change to your domain
      kind: Rule
      services:
        - name: pihole
          port: 80
    - match: Host(`pihole1.local.kaneworld.org`) # change to your domain
      kind: Rule
      services:
        - name: pihole
          port: 80
      middlewares:
        - name: default-headers
  tls:
    certResolver: dnsresolver
    #certResolver: letsencrypt
    #secretName: local-kaneworld-tls # change to your cert name

# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: pihole
#   namespace: pihole
#   annotations:
#     kubernetes.io/ingress.class: traefik-external
# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`pihole1.local.kaneworld.org`) || Host(`www.pihole1.local.kaneworld.org`)
#       kind: Rule
#       services:
#         - name: noop-service
#           port: 9999
#       middlewares:
#         - name: redirect-to-https
#           namespace: traefik

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: noop-service
#   namespace: pihole
# spec:
#   ports:
#     - port: 9999
#       targetPort: 80
#       protocol: TCP
#   clusterIP: None
